--- a/front-end/package.json
+++ b/front-end/package.json
@@ -76,7 +76,8 @@
     "swiper": "^8.3.0",
     "three": "^0.139.2",
     "waypoints": "^4.0.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
