commit_24_update_search_all_position

--- a/front-end/.env.production.local
+++ b/front-end/.env.production.local
@@ -1,3 +1,7 @@
 PUBLIC_URL="/hope-ui/react/build"
+REACT_APP_CLOUDINARY_CLOUD_NAME=ddu5tdvow
+REACT_APP_CLOUDINARY_API_KEY=588641245952967
+REACT_APP_CLOUDINARY_API_SECRET=njqrFLQXNCauxbAmlR0ThiX3LUU
+REACT_APP_CLOUDINARY_UPLOAD_PRESET=upload_image
 
 
