--- a/front-end/.env.development.local
+++ b/front-end/.env.development.local
@@ -1,1 +1,5 @@
-PUBLIC_URL="/"
+
+REACT_APP_CLOUDINARY_CLOUD_NAME=ddu5tdvow
+REACT_APP_CLOUDINARY_API_KEY=588641245952967
+REACT_APP_CLOUDINARY_API_SECRET=njqrFLQXNCauxbAmlR0ThiX3LUU
+REACT_APP_CLOUDINARY_UPLOAD_PRESET=upload_image
