--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,15 +18,18 @@
     "@fullcalendar/daygrid": "^5.9.0",
     "@fullcalendar/list": "^5.9.0",
     "@fullcalendar/react": "^5.11.0",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@reduxjs/toolkit": "^1.8.1",
     "antd": "^5.6.4",
+    "antd-img-crop": "^4.12.2",
     "aos": "^2.3.4",
     "apexcharts": "^3.33.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "choices.js": "^10.1.0",
+    "cloudinary-react": "^1.8.1",
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -46,6 +49,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^5.2.0",
     "react-cropper": "^2.1.8",
+    "react-currency-input-field": "^3.6.11",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
@@ -53,6 +57,8 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-flatpickr": "^3.10.11",
     "react-highlight-words": "^0.20.0",
+    "react-hook-form": "^7.45.2",
+    "react-horizontal-timeline": "^1.5.3",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
@@ -66,6 +72,7 @@
     "react-signature-pad-wrapper": "^3.1.1",
     "react-slider": "^2.0.1",
     "react-sortablejs": "^6.0.0",
+    "react-spreadsheet": "^0.8.3",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
@@ -76,7 +83,8 @@
     "swiper": "^8.3.0",
     "three": "^0.139.2",
     "waypoints": "^4.0.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
