--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@reduxjs/toolkit": "^1.8.1",
+    "@zxing/library": "^0.18.6",
     "antd": "^5.6.4",
     "aos": "^2.3.4",
     "apexcharts": "^3.33.0",
@@ -31,12 +32,14 @@
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
     "jquery": "^3.6.0",
+    "jsqr": "^1.4.0",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "nouislider-react": "^3.4.1",
     "pagination": "^0.4.6",
     "prismjs": "^1.24.1",
+    "quagga": "^0.12.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.1",
@@ -57,6 +60,8 @@
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
     "react-paginate": "^8.2.0",
+    "react-qr-reader": "^3.0.0-beta-1",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quilljs": "^1.3.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.14.1",
@@ -68,12 +73,14 @@
     "react-sortablejs": "^6.0.0",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.2",
+    "react-webcam": "^7.1.1",
     "redux": "^4.1.1",
     "smooth-scrollbar": "^8.6.3",
     "sortablejs": "^1.14.0",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.12",
     "swiper": "^8.3.0",
+    "tesseract.js": "^4.1.1",
     "three": "^0.139.2",
     "waypoints": "^4.0.1",
     "web-vitals": "^1.1.2",
