6_change_erd_and_complete_product

--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,17 +19,20 @@
     "@fullcalendar/list": "^5.9.0",
     "@fullcalendar/react": "^5.11.0",
     "@material-ui/core": "^4.12.4",
+    "@material/image-list": "^14.0.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
     "@reduxjs/toolkit": "^1.8.1",
     "antd": "^5.6.4",
-    "antd-img-crop": "^4.12.2",
     "aos": "^2.3.4",
     "apexcharts": "^3.33.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "choices.js": "^10.1.0",
+    "cloudinary": "^1.40.0",
     "cloudinary-react": "^1.8.1",
+    "firebase": "^10.2.0",
+    "formilk": "^0.21.0",
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -53,6 +56,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.10",
     "react-dropzone": "^11.5.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-flatpickr": "^3.10.11",
@@ -82,6 +86,7 @@
     "sweetalert2": "^11.7.12",
     "swiper": "^8.3.0",
     "three": "^0.139.2",
+    "uuid": "^9.0.0",
     "waypoints": "^4.0.1",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.5"
