--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -1,10 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/datn_ver_1
+spring.datasource.url=jdbc:mysql://localhost:8888/datn_ver_1
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=123456
-=======
-spring.datasource.password=hoant2103
->>>>>>> beephone_hoa
+spring.datasource.password=tam25112001
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.sql-script-encoding=UTF-8
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
