--- a/front-end/package.json
+++ b/front-end/package.json
@@ -34,10 +34,10 @@
     "choices.js": "^10.1.0",
     "cloudinary": "^1.40.0",
     "cloudinary-react": "^1.8.1",
-    "firebase": "^10.2.0",
-    "formilk": "^0.21.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "firebase": "^10.2.0",
+    "formilk": "^0.21.0",
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -68,8 +68,8 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-flatpickr": "^3.10.11",
     "react-highlight-words": "^0.20.0",
-    "react-horizontal-timeline": "^1.5.3",
     "react-hook-form": "^7.45.4",
+    "react-horizontal-timeline": "^1.5.3",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
@@ -100,6 +100,7 @@
     "uuid": "^9.0.0",
     "waypoints": "^4.0.1",
     "web-vitals": "^1.1.2",
+    "which": "^3.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
