--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/react": "^5.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
+    "@mui/x-date-pickers": "^6.11.0",
     "@reduxjs/toolkit": "^1.8.1",
     "antd": "^5.6.4",
     "aos": "^2.3.4",
@@ -27,6 +28,8 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "choices.js": "^10.1.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -35,6 +38,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "nouislider-react": "^3.4.1",
+    "numeral": "^2.0.6",
     "pagination": "^0.4.6",
     "prismjs": "^1.24.1",
     "quill": "^1.3.7",
@@ -53,6 +57,7 @@
     "react-dropzone-uploader": "^2.11.0",
     "react-flatpickr": "^3.10.11",
     "react-highlight-words": "^0.20.0",
+    "react-hook-form": "^7.45.4",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
@@ -75,6 +80,7 @@
     "sweetalert2": "^11.7.12",
     "swiper": "^8.3.0",
     "three": "^0.139.2",
+    "validator": "^13.11.0",
     "waypoints": "^4.0.1",
     "web-vitals": "^1.1.2"
   },
