--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,24 +9,36 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "react-toastify": "^9.1.3",
+    "react-highlight-words": "^0.20.0",
+    "react-paginate": "^8.2.0",
     "@fullcalendar/bootstrap": "^5.9.0",
     "@fullcalendar/core": "^5.9.0",
     "@fullcalendar/daygrid": "^5.9.0",
     "@fullcalendar/list": "^5.9.0",
     "@fullcalendar/react": "^5.11.0",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/material": "^5.13.7",
+    "@mailtop/horizontal-timeline": "^2.1.4",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
+    "@mui/x-date-pickers": "^6.10.2",
+    "@nextui-org/react": "^1.0.0-beta.13",
     "@reduxjs/toolkit": "^1.8.1",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "antd": "^5.6.4",
     "aos": "^2.3.4",
     "apexcharts": "^3.33.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "choices.js": "^10.1.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.9",
+    "framer-motion": "^10.12.21",
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -35,12 +47,10 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "nouislider-react": "^3.4.1",
-    "pagination": "^0.4.6",
     "prismjs": "^1.24.1",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.1",
-    "react-alert": "^7.0.3",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.4.0",
     "react-circular-progressbar": "^2.0.4",
@@ -52,27 +62,25 @@
     "react-dropzone": "^11.5.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-flatpickr": "^3.10.11",
-    "react-highlight-words": "^0.20.0",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
-    "react-paginate": "^8.2.0",
     "react-quilljs": "^1.3.0",
     "react-redux": "^8.0.1",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-select": "^5.2.2",
     "react-shepherd": "^4.0.0",
     "react-signature-pad-wrapper": "^3.1.1",
     "react-slider": "^2.0.1",
     "react-sortablejs": "^6.0.0",
-    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
+    "rsuite": "^5.37.0",
     "smooth-scrollbar": "^8.6.3",
     "sortablejs": "^1.14.0",
-    "styled-components": "^5.3.5",
-    "sweetalert2": "^11.7.12",
+    "styled-components": "^5.3.11",
+    "sweetalert2": "^11.7.1",
     "swiper": "^8.3.0",
     "three": "^0.139.2",
     "waypoints": "^4.0.1",
