--- a/front-end/package.json
+++ b/front-end/package.json
@@ -23,12 +23,8 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.140",
     "@mui/material": "^5.13.7",
-<<<<<<< HEAD
     "@mui/system": "^5.14.4",
     "@mui/x-date-pickers": "^6.11.1",
-=======
-    "@mui/x-date-pickers": "^6.11.0",
->>>>>>> beephone_dung
     "@reduxjs/toolkit": "^1.8.1",
     "@zxing/library": "^0.18.6",
     "antd": "^5.6.4",
@@ -37,17 +33,12 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "choices.js": "^10.1.0",
-<<<<<<< HEAD
     "cloudinary": "^1.40.0",
     "cloudinary-react": "^1.8.1",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
     "firebase": "^10.2.0",
     "formilk": "^0.21.0",
-=======
-    "date-fns": "^2.30.0",
-    "dayjs": "^1.11.9",
->>>>>>> beephone_dung
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -59,6 +50,7 @@
     "nouislider-react": "^3.4.1",
     "numeral": "^2.0.6",
     "pagination": "^0.4.6",
+    "path-key": "^4.0.0",
     "prismjs": "^1.24.1",
     "quagga": "^0.12.1",
     "quill": "^1.3.7",
@@ -80,10 +72,7 @@
     "react-flatpickr": "^3.10.11",
     "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.45.4",
-<<<<<<< HEAD
     "react-horizontal-timeline": "^1.5.3",
-=======
->>>>>>> beephone_dung
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
@@ -111,10 +100,7 @@
     "swiper": "^8.3.0",
     "tesseract.js": "^4.1.1",
     "three": "^0.139.2",
-<<<<<<< HEAD
     "uuid": "^9.0.0",
-=======
->>>>>>> beephone_dung
     "validator": "^13.11.0",
     "waypoints": "^4.0.1",
     "web-vitals": "^1.1.2",
