--- a/back_end/pom.xml
+++ b/back_end/pom.xml
@@ -39,8 +39,8 @@
         <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
         <dependency>
             <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>5.2.3</version>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version> <!-- Sử dụng phiên bản mới nhất hoặc tương thích -->
         </dependency>
         <dependency>
             <groupId>org.modelmapper</groupId>
