--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,9 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "react-toastify": "^9.1.3",
+    "react-highlight-words": "^0.20.0",
+    "react-paginate": "^8.2.0",
     "@fullcalendar/bootstrap": "^5.9.0",
     "@fullcalendar/core": "^5.9.0",
     "@fullcalendar/daygrid": "^5.9.0",
@@ -22,10 +25,9 @@
     "@fullcalendar/react": "^5.11.0",
     "@mailtop/horizontal-timeline": "^2.1.4",
     "@mui/icons-material": "^5.14.0",
-    "@mui/joy": "^5.0.0-beta.4",
-    "@mui/lab": "^5.0.0-alpha.142",
-    "@mui/material": "^5.14.7",
+    "@mui/material": "^5.14.0",
     "@mui/x-date-pickers": "^6.10.2",
+    "@nextui-org/react": "^1.0.0-beta.13",
     "@reduxjs/toolkit": "^1.8.1",
     "@unicef/material-ui-currency-textfield": "^0.8.6",
     "antd": "^5.6.4",
@@ -36,7 +38,7 @@
     "choices.js": "^10.1.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
-    "framer-motion": "^10.16.1",
+    "framer-motion": "^10.12.21",
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
     "immutability-helper": "^3.1.1",
@@ -60,12 +62,9 @@
     "react-dropzone": "^11.5.3",
     "react-dropzone-uploader": "^2.11.0",
     "react-flatpickr": "^3.10.11",
-    "react-highlight-words": "^0.20.0",
     "react-icons": "^4.6.0",
     "react-leaflet": "^4.2.0",
     "react-masonry-css": "^1.0.16",
-    "react-number-format": "^5.3.1",
-    "react-paginate": "^8.2.0",
     "react-quilljs": "^1.3.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.4.3",
@@ -75,7 +74,6 @@
     "react-signature-pad-wrapper": "^3.1.1",
     "react-slider": "^2.0.1",
     "react-sortablejs": "^6.0.0",
-    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.1",
     "rsuite": "^5.37.0",
