--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "@fullcalendar/react": "^5.11.0",
     "@mui/icons-material": "^5.13.7",
     "@mui/material": "^5.13.7",
+    "@mui/x-date-pickers": "^6.12.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@zxing/library": "^0.18.6",
     "antd": "^5.6.4",
