--- a/front-end/package.json
+++ b/front-end/package.json
@@ -44,6 +44,7 @@
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
+    "notistack": "^3.0.1",
     "nouislider-react": "^3.4.1",
     "prismjs": "^1.24.1",
     "quill": "^1.3.7",
