--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,7 +19,7 @@
     "@fullcalendar/list": "^5.9.0",
     "@fullcalendar/react": "^5.11.0",
     "@mailtop/horizontal-timeline": "^2.1.4",
-    "@mui/icons-material": "^5.13.7",
+    "@mui/icons-material": "^5.14.9",
     "@mui/joy": "^5.0.0-beta.5",
     "@mui/lab": "^5.0.0-alpha.143",
     "@mui/material": "^5.13.7",
@@ -42,7 +42,9 @@
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.21",
+    "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.29.3",
+    "multiselect-react-dropdown": "^2.0.25",
     "notistack": "^3.0.1",
     "nouislider-react": "^3.4.1",
     "numeral": "^2.0.6",
@@ -77,7 +79,6 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
-    "react-select": "^5.2.2",
     "react-shepherd": "^4.0.0",
     "react-signature-pad-wrapper": "^3.1.1",
     "react-slider": "^2.0.1",
