--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.datasource.password=123456
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #spring.datasource.sql-script-encoding=UTF-8
  spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
