--- a/front-end/package.json
+++ b/front-end/package.json
@@ -52,6 +52,9 @@
     "prismjs": "^1.24.1",
     "quagga": "^0.12.1",
     "quill": "^1.3.7",
+    "rc-banner-anim": "^2.4.5",
+    "rc-queue-anim": "^2.0.0",
+    "rc-tween-one": "^3.0.6",
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.1",
     "react-apexcharts": "^1.3.9",
@@ -60,6 +63,7 @@
     "react-countup": "^5.2.0",
     "react-cropper": "^2.1.8",
     "react-currency-input-field": "^3.6.11",
+    "react-data-export": "^0.6.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
