--- a/front-end/package.json
+++ b/front-end/package.json
@@ -30,7 +30,7 @@
     "aos": "^2.3.4",
     "apexcharts": "^3.33.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.2",
     "choices.js": "^10.1.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
@@ -58,7 +58,7 @@
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.1",
     "react-apexcharts": "^1.3.9",
-    "react-bootstrap": "^2.4.0",
+    "react-bootstrap": "^2.9.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^5.2.0",
     "react-cropper": "^2.1.8",
@@ -100,7 +100,8 @@
     "validator": "^13.11.0",
     "waypoints": "^4.0.1",
     "web-vitals": "^1.1.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
