--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.datasource.sql-script-encoding=UTF-8
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-#spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.fail-on-empty-beans=false
 
