--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,8 +9,10 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/bootstrap": "^5.9.0",
@@ -78,6 +80,7 @@
     "react-masonry-css": "^1.0.16",
     "react-number-format": "^5.3.1",
     "react-paginate": "^8.2.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-quilljs": "^1.3.0",
     "react-redux": "^8.1.2",
