--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.password=hoant2103
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.sql-script-encoding=UTF-8
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
 #Config Email sender
