--- a/back_end/pom.xml
+++ b/back_end/pom.xml
@@ -18,6 +18,11 @@
   </properties>
   <dependencies>
       <dependency>
+          <groupId>com.cloudinary</groupId>
+          <artifactId>cloudinary-http44</artifactId>
+          <version>1.34.0</version> <!-- Kiểm tra và sử dụng phiên bản mới nhất tại thời điểm bạn đang làm việc -->
+      </dependency>
+      <dependency>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-starter-mail</artifactId>
       </dependency>
