--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -17,4 +17,8 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+#Config cloudynary
+cloudinary.cloud-name=dcsifrmg4
+cloudinary.api-key=712174924781976
+cloudinary.api-secret=qove0ilfDseD3QEKxe-Tj1zCNyE
 
