--- a/back_end/pom.xml
+++ b/back_end/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
     </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.11.0</version>
+    </dependency>
+
 
     <!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
     <dependency>
