--- a/front-end/package.json
+++ b/front-end/package.json
@@ -51,6 +51,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "moment": "^2.29.3",
     "multiselect-react-dropdown": "^2.0.25",
+    "net": "^1.0.2",
     "notistack": "^3.0.1",
     "nouislider-react": "^3.4.1",
     "numeral": "^2.0.6",
@@ -101,7 +102,9 @@
     "rsuite": "^5.37.0",
     "scandit-sdk": "^5.13.5",
     "smooth-scrollbar": "^8.6.3",
+    "sockjs-client": "^1.6.1",
     "sortablejs": "^1.14.0",
+    "stompjs": "^2.3.3",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.32",
     "swiper": "^8.3.0",
