Fix Voucher, Rank và DBGen

--- a/back_end/src/main/resources/application.properties
+++ b/back_end/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jackson.serialization.fail-on-empty-beans=false
+
+# Config Size Multipath File
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 #Config Email sender
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
