--- a/front-end/package.json
+++ b/front-end/package.json
@@ -44,6 +44,8 @@
     "framer-motion": "^10.16.1",
     "fslightbox-react": "^1.6.2-2",
     "fullcalendar-interaction": "^5.3.3",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
     "jquery": "^3.6.0",
     "leaflet": "^1.7.1",
@@ -58,6 +60,7 @@
     "pagination": "^0.4.6",
     "popper.js": "^1.16.1",
     "prismjs": "^1.24.1",
+    "quagga": "^0.12.1",
     "quill": "^1.3.7",
     "rc-banner-anim": "^2.4.5",
     "rc-queue-anim": "^2.0.0",
@@ -65,6 +68,8 @@
     "react": "^18.2.0",
     "react-accessible-treeview": "^2.3.1",
     "react-apexcharts": "^1.3.9",
+    "react-barcode": "^1.4.6",
+    "react-barcode-qrcode-scanner": "^0.1.3",
     "react-bootstrap": "^2.9.0",
     "react-circular-progressbar": "^2.0.4",
     "react-countup": "^5.2.0",
@@ -99,6 +104,7 @@
     "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.2",
+    "react-webcam": "^7.2.0",
     "redux": "^4.1.1",
     "rsuite": "^5.37.0",
     "scandit-sdk": "^5.13.5",
@@ -114,12 +120,14 @@
     "waypoints": "^4.0.1",
     "web-vitals": "^1.1.2",
     "xlsx": "^0.18.5",
-    "xlsx-populate": "^1.21.0"
+    "xlsx-populate": "^1.21.0",
+    "zxing": "^0.1.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "html5-qrcode": "^2.3.8",
     "sass": "^1.49.0",
     "sass-loader": "^13.2.0",
     "typescript": "^4.7.4"
