--- a/front-end/package.json
+++ b/front-end/package.json
@@ -106,6 +106,7 @@
     "react-transition-group": "^4.4.2",
     "react-webcam": "^7.2.0",
     "redux": "^4.1.1",
+    "redux-persist": "^6.0.0",
     "rsuite": "^5.37.0",
     "scandit-sdk": "^5.13.5",
     "smooth-scrollbar": "^8.6.3",
