--- a/front-end/package.json
+++ b/front-end/package.json
@@ -40,6 +40,7 @@
     "choices.js": "^10.1.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
+    "file-saver": "^1.3.2",
     "firebase": "^10.3.0",
     "framer-motion": "^10.16.1",
     "fslightbox-react": "^1.6.2-2",
