--- a/front-end/package.json
+++ b/front-end/package.json
@@ -27,6 +27,7 @@
     "@mui/lab": "^5.0.0-alpha.143",
     "@mui/material": "^5.13.7",
     "@mui/x-date-pickers": "^6.12.1",
+    "@mui/x-date-pickers-pro": "^6.18.5",
     "@reduxjs/toolkit": "^1.8.1",
     "@uiw/react-color-sketch": "^1.4.3",
     "@unicef/material-ui-currency-textfield": "^0.8.6",
